--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -40,10 +40,10 @@
   <!-- 内容区-->
  	<div class="container content">			
  		<div class="index-head">
- 			<h1 style="color:darkslategray;">感谢大家使用知音町这个无名网站</h1>
+ 			<h1 style="color:darkslategray;">感谢大家来到知音町这个无名小站</h1>
  			<div class="index-underline"></div>
  			<p style="color:darkslategray;font-size: 15px;">粉丝们的关注将是我持续更新的动力噢！</p>
- 			<p style="color:darkslategray;font-size: 15px;">加QQ群了解最新动态哦：<strong>1002890472</strong></p>
+ 			<p style="color:darkslategray;font-size: 15px;">加QQ群了解最新动态：<strong>1002890472</strong></p>
  		</div>
  	</div>
  	
