--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"> 
-    <title>主页</title>   
+    <title>知音町</title>   
     <script src="/lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="/css/index.css"/>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap.min.css"/>
@@ -30,9 +30,9 @@
             
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="homepage">首页</a></li>
-                    <li><a href="resources">资源库</a></li>
-                    <li><a href="more">更多</a></li>
+                    <li><a href="/page/homepage">首页</a></li>
+                    <li><a href="/page/resources">资源库</a></li>
+                    <li><a href="/page/more">更多</a></li>
                 </ul>
             </div>
         </div>
