--- a/views/more.ejs
+++ b/views/more.ejs
@@ -29,9 +29,9 @@
             
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                   <li><a href="homepage">首页</a></li>
-                    <li><a href="resources">资源库</a></li>
-                    <li><a href="more">更多</a></li>
+                    <li><a href="/page/homepage">首页</a></li>
+                    <li><a href="/page/resources">资源库</a></li>
+                    <li><a href="/page/more">更多</a></li>
                 </ul>
             </div>
         </div>
