--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,67 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"> 
+    <title>知音町</title>   
+    <script src="/lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="/lib/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <script src="/lib/vue.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+</head>
+<body class="app">
+<div id="app" >
+	<!--导航栏-->
+   <div class="navbar navbar-inverse navbar-fixed-top" id="menu-nav">
+        <div class="container" >
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <!-- sr-only仅阅读器能见实际不会呈现在页面上 -->
+                    <span class="sr-only">切换导航</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">知音町</a>
+            </div>
+            
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/page/homepage">首页</a></li>
+                    <li><a href="/page/resources">资源库</a></li>
+                    <li><a href="/page/more">更多</a></li>
+                </ul>
+            </div>
+        </div>
+   </div>
+  <!-- 内容区-->
+ 	<div class="container content">			
+ 		<div class="index-head">
+ 			<h1 style="color:darkslategray;">页面不存在</h1>
+ 			<div class="index-underline"></div>
+ 		</div>
+ 	</div>
+ 	
+ 	<div class="container index-img col-md-12">
+	 	<img class="index-img" src="/img/bg2.png"/>
+	</div> 
+</div>   
+</body>
+
+
+	<script type="text/javascript">
+    	let vm = new Vue({
+		el: '#app',
+		data: {
+			msg:"hello world!"
+
+		},
+		methods:{
+			
+        }
+	});
+    </script>
+</html>
