--- a/views/more.ejs
+++ b/views/more.ejs
@@ -43,7 +43,7 @@
  			<div class="row">
 			  <div class="col-sm-6 col-md-5">
 			    <div class="thumbnail">
-			      <img src="/img/QQ.jpg" alt="...">
+			      <img src="/img/QQ.jpg" alt="QQ群">
 			      <div class="caption">
 			        <h3>音声同好会</h3>
 			        <p>加入音声同好会，和大家一起团购音声、支持自己喜欢的CV！</p>
@@ -53,7 +53,20 @@
 			    </div>
 			  </div>
 			</div>
- 		</div>					
+			
+			<div class="row">
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <img src="/img/wangyiyun.jpg" alt="网易云电台">
+			      <div class="caption">
+			        <h3>网易云电台</h3>
+			        <p>播主不定时跟新R15同人音声，可以直接在线收听！</p>			        
+			        <strong><p style="color: darkslategray;"><a href="https://music.163.com/radio/?id=794075661&userid=1874168785">点击跳转网易云电台</a></p></strong>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+ 		</div>	
  	</div>
 </div>   
 </body>
