--- a/views/picture/main.ejs
+++ b/views/picture/main.ejs
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"> 
-    <title>知音町</title>   
+    <title>图库</title>   
     <script src="/lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
     <script src="/lib/vue.min.js" type="text/javascript" charset="utf-8"></script>
@@ -39,16 +38,16 @@
         </div>
    </div>
   <!-- 内容区-->
- 	<div class="container content">			
- 		<div class="index-head">
- 			<h1 style="color:darkslategray;">页面不存在</h1>
- 			<div class="index-underline"></div>
- 		</div>
+ 	<div class="container content">	
+ 		<div>
+ 			<div class="row">
+			  <div class="col-sm-6 col-md-5">
+			  	<a href="/page/picture/R15"><div class="alert alert-success" role="alert" style="font-family: '微软雅黑';font-size: 25px;text-align: center;">R15</div></a>
+			  	<a href="/page/picture/R18"><div class="alert alert-danger" role="alert" style="font-family: '微软雅黑';font-size: 25px;text-align: center;" >R18</div></a>
+			  </div>
+			</div>
+ 		</div>	
  	</div>
- 	
- 	<div class="container index-img col-md-12">
-	 	<img class="index-img" src="/img/bg2.png"/>
-	</div> 
 </div>   
 </body>
 
