--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -31,7 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/page/homepage">首页</a></li>
-                    <li><a href="/page/resources">资源库</a></li>
+                    <li><a href="/page/resources">音声</a></li>
+                    <li><a href="/page/picture">图片</a></li>
                     <li><a href="/page/more">更多</a></li>
                 </ul>
             </div>
